--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(10px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #aa52e0;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #13ca5e);
+            background: linear-gradient(135deg, #aa52e0, #aa52e0);
             color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
@@ -123,7 +123,7 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #13ca5e;
+            background-color: #aa52e0;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -141,7 +141,7 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #13ca5e;
+            background-color: #aa52e0;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -186,12 +186,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #aa52e0;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #aa52e0;
         }
 
         input[type="text"],
@@ -323,7 +323,7 @@
         }
 
         .calendar td.selected {
-            background-color: #3e3f41;
+            background-color: #aa52e0;
             color: #fff;
         }
 
@@ -575,7 +575,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #aa52e0;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -607,9 +607,9 @@
         }
 
         .edit-button {
-            background-color: #ffffff;
-            color: #1a1a1a;
-            border: 1px solid black;
+            background-color: #aa52e0;
+            color: #ffffff;
+            border: 1px solid rgb(255, 255, 255);
             /* ← 外枠を黒1pxに設定 */
             border-radius: 5px;
             padding: 5px 10px;
@@ -622,7 +622,7 @@
         }
 
         .edit-button:hover {
-            background-color: #13ca5e;
+            background-color: #aa52e0;
             color: #ffffff;
             /* ← 黒背景に合わせて文字色を白にすると視認性が上がります（任意） */
         }
@@ -631,7 +631,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #aa52e0;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -656,13 +656,13 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #13ca5e;
+            background-color: #aa52e0;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
-            background-color: #13ca5e;
+            background-color: #aa52e0;
         }
 
         @media (max-width: 768px) {
@@ -685,7 +685,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
     /* 外側に色を追加 */
-    box-shadow: 0 0 0 3px #13ca5e
+    box-shadow: 0 0 0 3px #aa52e0
         }
 
         /* 必須マークのスタイル */
@@ -795,7 +795,7 @@
     </div>
 
     <div class="container">
-        <h1>予約フォームA<br>予約フォーム
+        <h1>華彩ハンナヒーリングサロン<br>予約フォーム
         </h1>
         <!-- 追加するボタン -->
         <div class="repeat-booking-wrapper">
@@ -985,6 +985,7 @@
         // 選択したメニューを保存
         function saveMenuSelection(menuType) {
             localStorage.setItem('selectedMenu', menuType);
+            localStorage.setItem('selectedVisit', element.id);
         }
 
         // メニューを選択したときにローカルストレージに保存
@@ -1002,12 +1003,6 @@
                 return;
             }
 
-    // ✅ ご来店回数（2回目以降）を自動で選択
-    const repeatVisitButton = document.getElementById('repeatVisit');
-    if (repeatVisitButton) {
-        selectVisit(repeatVisitButton);
-    }
-
             // ✅ 前回の選択状態を初期化
             // 1. オプションの active クラスを全て外す
             document.querySelectorAll('.irradiations button.active').forEach(btn => {
@@ -1022,12 +1017,12 @@
                 showMenu(savedMenu);
             }
 
-            // ✅ ここでカレンダーへスクロール
-            const targetElement = document.getElementById('calendar1');
-            if (targetElement) {
-                targetElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
-            }
-        }
+    // ✅ 「お相手の生年月日」入力欄へスクロール
+    const targetElement = document.getElementById('youbirth');
+    if (targetElement) {
+        targetElement.scrollIntoView({ behavior: 'smooth', block: 'center' });
+    }
+}
 
 function updateDisplayInfo() {
     const name = document.getElementById('name').value;
@@ -1273,23 +1268,27 @@ function updateDisplayInfo() {
             updateDisplayInfo(); // 表示を更新
         }
 
-        function selectVisit(element) {
-            // 選択された日時をリセット
-            selectedFullDate = '';
+function selectVisit(element) {
+    // 選択された日時をリセット
+    selectedFullDate = '';
 
-            document.getElementById('firstVisit').classList.remove('active');
-            document.getElementById('repeatVisit').classList.remove('active');
-            element.classList.add('active');
-            visitCount = element.innerText;
+    // ボタンの状態をリセット
+    document.getElementById('firstVisit').classList.remove('active');
+    document.getElementById('repeatVisit').classList.remove('active');
+    element.classList.add('active');
 
-            // 選択された訪問回数に対応する時間を取得
-            selectedVisitTime = visitTimes[visitCount];
+    visitCount = element.innerText;
 
-            console.log('選択された訪問回数の時間:', selectedVisitTime);
+    // ✅ 選択状態を localStorage に保存
+    localStorage.setItem('selectedVisit', element.id);
 
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
+    // 選択された訪問回数に対応する時間を取得
+    selectedVisitTime = visitTimes[visitCount];
+    console.log('選択された訪問回数の時間:', selectedVisitTime);
+
+    // カレンダーを更新するために取得する日付を渡す
+    fetchAvailability(currentDate);
+}
 
         // メニューの選択を保存する関数
         function selectMenu(element) {
@@ -1355,16 +1354,25 @@ function updateDisplayInfo() {
             updateDisplayInfo();
         }
 
-        // ページ読み込み時にローカルストレージから選択状態を復元
-        document.addEventListener("DOMContentLoaded", () => {
-            let selectedMenus = JSON.parse(localStorage.getItem('selectedMenus') || '[]');
-            selectedMenus.forEach(menuId => {
-                let menuButton = document.getElementById(menuId);
-                if (menuButton) {
-                    menuButton.classList.add('selected');
-                }
-            });
-        });
+document.addEventListener("DOMContentLoaded", () => {
+    // visit復元
+    const savedVisit = localStorage.getItem('selectedVisit');
+    if (savedVisit) {
+        const visitButton = document.getElementById(savedVisit);
+        if (visitButton) {
+            selectVisit(visitButton);
+        }
+    }
+
+    // menu復元（元からある処理）
+    let selectedMenus = JSON.parse(localStorage.getItem('selectedMenus') || '[]');
+    selectedMenus.forEach(menuId => {
+        let menuButton = document.getElementById(menuId);
+        if (menuButton) {
+            menuButton.classList.add('selected');
+        }
+    });
+});
 
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
