--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
         <div class="labeltyuuou">お相手の生年月日<br>（例：西暦記載○年◯月◯日）<br>※相性を見る場合のみご記入下さい。</div>
         <input type="text" id="youbirth" placeholder="生年月日を入力してください" oninput="saveInput('youbirth')">
 
-        <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
+        <div class="label" id="course">どちらがご希望ですか？<span class="required">必須</span></div>
         <div class="menu-sections">
             <button type="button" onclick="showMenu('male')">対面</button>
             <button type="button" onclick="showMenu('female')">オンライン</button>
@@ -1067,7 +1067,7 @@ function updateDisplayInfo() {
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="${labelStyle}"><strong>お名前</strong></span> ${namehurigana}</p>
+            <p><span style="${labelStyle}"><strong>お名前ふりがな</strong></span> ${namehurigana}</p>
             <button class="edit-button" onclick="scrollToElement('namehurigana')">修正</button>
         </div>
         <hr>
