--- a/index.html
+++ b/index.html
@@ -954,8 +954,8 @@
                 <span class="highlight-text">◆ボディエステ◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="3850">むくみ解消・アロマボディトリートメント美脚コース</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="5500">肩こり解消・アロマボディトリートメント美背中コース</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="3850">むくみ解消<br>・<br>アロマボディトリートメント美脚コース</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="5500">肩こり解消<br>・<br>アロマボディトリートメント美背中コース</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="9900">アロマボディ全身美肌トリートメント</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="9900">美ボディ痩身エステ</button>
             </div>
