--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
             const message5 = document.getElementById('message5').value;
+            const message6 = document.getElementById('message6').value;
             const message7 = document.getElementById('message7').value;
 
             const formData = {
@@ -563,6 +564,7 @@
                 message2,
                 message3,
                 message4,
+                message5,
                 message5,
                 message7,
             };
