--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         }
 
         .calendar td.selected {
-            background-color: #7f6c85;
+            background-color: #fd1b1b;
             color: #fff;
         }
 
@@ -761,7 +761,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
             /* 外側に色を追加 */
-            box-shadow: 0 0 0 3px #7f6c85
+            box-shadow: 0 0 0 3px #ff4040
         }
 
         /* 必須マークのスタイル */
@@ -1379,11 +1379,6 @@
         <div class="info-row">
             <p>${selectedSymptomText}</p>
             <button class="edit-button" onclick="scrollToElement('male'); scrollToElement('female'); scrollToElement('whitening');">修正</button>
-        </div>
-        <hr>
-        <div class="info-row">
-            <p>${irradiationsText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正</button>
         </div>
         <hr>
         <div class="info-row">
