--- a/index.html
+++ b/index.html
@@ -788,38 +788,27 @@
             color: #000000;
         }
 
-/* グローバルの共通スタイル */
-input[type="text"],
-input[type="tel"],
-input[type="email"],
-textarea {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 10px;
-  border: 1px solid #555555;
-  border-radius: 3px;
-  box-sizing: border-box;
-  font-size: 16px;
-  transition: all 0.3s;
-}
-
-/* ✨メール専用ラッパー */
+/* メール専用ラッパー */
 .email-input-row {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  flex-wrap: nowrap; /* ←折り返さない */
+  flex-wrap: wrap;
 }
 
-/* メール欄の input と select は幅を自動にする */
+/* メール欄のinputやselectは共通幅指定しない */
 .email-input-row input,
 .email-input-row select {
-  width: auto !important; /* ←ここで強制上書き */
-  flex: 1 1 220px;        /* 最小220pxくらいで伸縮 */
-  margin-bottom: 0;       /* 下余白消す */
+  flex: 1 1 220px;
+  width: auto; /* ← 100%幅を無効化 */
+  padding: 10px;
+  border: 1px solid #555;
+  border-radius: 3px;
+  font-size: 16px;
+  box-sizing: border-box;
 }
 
-/* @マークを中央に */
+/* @マークだけ縦位置を中央揃え */
 .email-input-row .at-mark {
   font-size: 16px;
   line-height: 1;
