--- a/index.html
+++ b/index.html
@@ -2070,11 +2070,13 @@ function selectVisit(element) {
         document.querySelector('button[onclick="showMenu(\'man-body\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'man-hairremoval\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'man-others\')"]').style.display = 'inline-block';
+        document.querySelector('button[onclick="showMenu(\'wakaranai\')"]').style.display = 'inline-block';
     } else if (visitCount === '女性') {
         document.querySelector('button[onclick="showMenu(\'girl-facial\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'girl-body\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'girl-hairremoval\')"]').style.display = 'inline-block';
         document.querySelector('button[onclick="showMenu(\'girl-others\')"]').style.display = 'inline-block';
+        document.querySelector('button[onclick="showMenu(\'wakaranai\')"]').style.display = 'inline-block';
     }
 
     // 選択された訪問回数に対応する時間を取得
