--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
 
 /* ドメイン選択だけ幅を固定・縮める */
 #emailDomainSelect {
-    flex: 0 0 150px; /* ← 固定幅にする（例: 180px） */
+    flex: 0 0 100px; /* ← 固定幅にする（例: 180px） */
     max-width: 200px; /* ← 伸びすぎ防止（任意） */
 }
 
@@ -902,7 +902,7 @@
 
             <!-- ドメイン選択 -->
             <select id="emailDomainSelect" onchange="onEmailDomainSelectChange()">
-                <option value="" selected>ドメインを選択</option>
+                <option value="" selected>選択</option>
                 <option value="@gmail.com">@gmail.com</option>
                 <option value="@icloud.com">@icloud.com</option>
                 <option value="@outlook.jp">@outlook.jp</option>
