--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
   />
 
   <!-- ドメイン選択（確認） -->
-  <select id="emailDomainSelect" onchange="onEmailDomainSelectChange('2')">
+  <select id="emailDomainSelect2" onchange="onEmailDomainSelectChange('2')">
     <option value="" selected>選択</option>
     <option value="@gmail.com">@gmail.com</option>
     <option value="@icloud.com">@icloud.com</option>
